# worldforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_TESTING.md  QUICKSTART.md  README.md  SESSION_COMPLETION.md  SESSION_SUMMARY.md  SETUP.md  TESTING_SUMMARY.md  check-docker.sh  docker-compose.yml  pytest.ini  start-mvp.sh  test_local.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-local.txt  requirements-updated.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260301_2105_initial_schema.py  20260303_multi_project.py  20260404_contradictions.py  20260405_add_resolution_note.py  20260405_syntheses.py  20260418_contradiction_unique_pair.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: schemas.py
backend/app/consistency/: detector.py  similarity.py
backend/app/core/: config.py  security.py
backend/app/database/: connection.py  models.py
backend/app/export/: graph_builder.py  obsidian.py
backend/app/ingestion/: chunker.py  embedder.py  entity_extractor.py  parser.py  pipeline.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: test_basic.py  test_contradiction_api.py  test_contradiction_service.py  test_documents_api.py  test_ingestion_service.py  test_integration.py  test_llm_providers.py  test_project_repository.py  test_projects_api.py  test_qdrant_service.py  test_rag_service.py  test_repositories.py  test_settings.py  test_synthesis_api.py  test_synthesis_service.py
(+190 files in other folders)
