[project]
name = "canon-builder"
version = "1.0.0"
description = "RAG-powered worldbuilding knowledge system"
requires-python = ">=3.11"
authors = [{ name = "Alex Barclay" }]
license = { text = "MIT" }
readme = "../README.md"
keywords = ["rag", "worldbuilding", "llm", "fastapi", "qdrant"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "qdrant-client>=1.7.3",
    "anthropic>=0.42.0",
    "openai>=1.12.0",
    "llama-index-core>=0.10.12",
    "pypdf>=4.0.1",
    "tiktoken>=0.6.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[project.urls]
Repository = "https://github.com/adbarc92/worldforge"
Issues = "https://github.com/adbarc92/worldforge/issues"
